--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     document.getElementById('wish').innerHTML = days + "::Days " + hours + "::Hours " + minutes + "::Minutes " + seconds + "::Seconds";
     if (seconds == 0) {
       console.log(i);
-      window.location.href="birthday.html";
+      window.location.href="Birthday.html";
     }
   }, 1000);
 </script>
